--- a/public/css/default.css
+++ b/public/css/default.css
@@ -18,102 +18,139 @@ body{
     background: #eee;
     font:13px/1.6 normal Tahoma, Arial; 
     color: #333;
-    
 }
 
-body > header{
+body header{
     width: 100%;
-    min-height: 45px;
     float:left;
+    margin: 0 0 15px 0;
 }
 
-body > header > nav{
-    min-height: 45px; 
+body header nav{
     width: 100%;
     background: white;
-    position: fixed;
-    z-index: 100;
-    float:left;
+    display: block;
+    overflow: hidden;
+
 }
 
-body > header > nav li a{
-    width: 17%;
+body header nav ul li {
+    width: 22%;
     display: inline-block;
+
+}
+
+body header nav ul li a{
     line-height: 40px;
     text-align: center;
     font-size: 16px;
-    float: left;
+    display: block;
 }
 
-body > header > nav a:hover{
-    color: white;     
+header nav ul li:nth-child(1) {
+    width: 34%;
 }
 
-.menuBlue{
+header nav > ul > li > ul {       
+    display: none;
+    opacity: 0;
+    position: absolute;
+    visibility: hidden;
+    width: 22%;
+    background: whitesmoke;
+}
+
+header nav > ul > li:hover > ul {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+
+}
+
+header nav > ul > li > ul > li:nth-child(n) {
+    display: block;
+    width: 100%;
+    border: 0;
+}
+
+header nav > ul > li > ul > li:nth-child(n) a {
+    border: 0;
+    font-size: 13px;
+    text-align: left;
+    line-height: 30px;
+    padding: 0 0 0 10px;
+}
+
+header nav ul li:nth-child(n) a:hover{
+    transition: all 0.4s; 
+} 
+
+header nav ul li:nth-child(1) a {
     border-bottom: 5px solid #4D90FE;
     color: #4D90FE;
-    width: 32%;
 }
-.menuBlue:hover, .activeBlue{
+header nav ul li:nth-child(1) a:hover,header nav ul li:nth-child(1) .active{
     background: rgba(77,144,254,0.65);
     color: white;
 }
-.menuGreen{
+header nav ul li:nth-child(2) a{
     border-bottom: 5px solid #81b900;
     color: #81b900;
 }
-.menuGreen:hover, .activeGreen{
+header nav ul li:nth-child(2) a:hover,header nav ul li:nth-child(2) .active{
     background: rgba(129,185,0,0.65);
     color: white;
 }
-.menuYellow{
+header nav ul li:nth-child(3) a{
     border-bottom: 5px solid #ffb902;
     color: #ffb902;
 }
-.menuYellow:hover, .activeYellow{
+header nav ul li:nth-child(3) a:hover,header nav ul li:nth-child(3) .active{
     background: rgba(255,185,2,0.65);
     color: white;
 }
-.menuRed{
+header nav ul li:nth-child(4) a{
     border-bottom: 5px solid #f25022;
     color: #f25022;
 }
-.menuRed:hover, .activeRed{
+header nav ul li:nth-child(4) a:hover,header nav ul li:nth-child(4) .active{
     background: rgba(242,80,34,0.65);
     color: white;
 }
-.menuBlack{
+header nav ul li:nth-child(5) a{
     border-bottom: 5px solid #303030;
     color: #303030
 }
-.menuBlack:hover, .activeBlack{
+header nav ul li:nth-child(5) a:hover, header nav ul li:nth-child(5) .active{
     background: rgba(48,48,48,0.65);
     color: white;
 }
 
+
+
 @media (max-width:480px), (max-device-width: 480px) {
-    body > header > nav {
+    body header  nav {
         position: relative;
         z-index: auto;
     }
 
-    body > header > nav a{
+    header nav ul li:nth-child(n) {
         width: 100%;
+        float:left;
     }
-    .menuBlue{width: 100%;}
 }
 
 .concent {
     width: calc(68% - 60px);
     min-height: 0px;
-    margin: 30px 30px 0 30px;
+    margin: 15px 30px 0 30px;
     float: left;
 }
 
 .panel {
     width: calc(32% - 30px);
     min-height: 400px;
-    margin: 30px 0 0 30px;
+    margin: 15px 0 0 30px;
     float:left;
 }
 
@@ -125,32 +162,36 @@ body > header > nav a:hover{
     margin: 0 0 30px 0;
 }
 
-.concent article h1{
-    //font-size: 24px;
-    font-size: 24px;
+.concent article h2{
+    font-size: 20px;
+    margin-bottom: 15px; 
 }
 
 .concent article p{
-   
-font-size: 16px;
-    
+
+    font-size: 14px;
+
 }
 
 @media (max-width:750px) , (max-device-width: 750px)  {
     .panel {
         width: calc(100% - 30px);      
-        margin: 15px 15px 0 15px;
+        margin: 7px 15px 0 15px;
     }
 
     .concent{
         width: calc(100% - 30px);
-        margin: 15px 15px 0 15px;
+        margin: 7px 15px 0 15px;
     }
 
     .concent article, .panel article{
         width: calc(100% - 30px);
         padding: 15px;
         margin: 0 0 15px 0;
+    }
+
+    body > header{
+        margin: 0 0 7px 0;
     }
 }
 
@@ -163,19 +204,19 @@ footer{
     line-height: 40px;
 }
 
-.concent article a, .panel article a{text-decoration: underline;}
-.concent article a:hover, .panel article a:hover{text-decoration: none;}
+/*FORM*/
 
-
-img { max-width: 100%; height: auto; }
-
+form{
+    margin: 0 0 40px 0;
+    display: block;
+}
 
 .formField select:focus, .formField select:hover, 
 .formField textarea:hover, .formField textarea:focus,
-.formField input:hover,.formField input:focus
-{border: 1px solid #4D90FE;
- outline:0; 
- outline-offset: 0px;
+.formField input:hover,.formField input:focus{
+    border: 1px solid #4D90FE;
+    outline:0; 
+    outline-offset: 0px;
 }
 
 .formField select{width: 100%;
@@ -185,6 +226,10 @@ img { max-width: 100%; height: auto; }
                   border: 1px solid #dddddd;
                   box-sizing: border-box;
                   margin: 2px 0;}
+
+.formField select[multiple="multiple"]{
+    height: 90px; 
+}
 
 .formField textarea{width: 100%;
                     font-size: 16px;
@@ -206,35 +251,296 @@ img { max-width: 100%; height: auto; }
 .formField span{color:#DD4B39;}
 .formField label{font-weight:bold;}
 
-.formButton input[type="submit"]{font-size:14px;height: 30px;min-width: 90px;color:white;background:#4D90FE;border: 1px solid #4D90FE;}
-.formButton input[type="submit"]:hover{color:#4D90FE;background:white;}
+.formButton input[type="submit"], .formButton input[type="button"]{font-size:14px;height: 30px;min-width: 90px;color:white;background:#4D90FE;border: 1px solid #4D90FE;}
+.formButton input[type="submit"]:hover, .formButton input[type="button"]:hover{color:#4D90FE;background:white;}
 .formButton a{float: right;line-height: 30px;}
 
-//.polozka:nth-child(5n + 1) 
-//.polozka:nth-child(5) ~ .polozka
+/*FORM*/
 
-//class:root
-//class:empty
-//class:checked
-//class:enabled
-//class:first-child
-//class:nth-last-child(n)
+/*BIGBUTTON*/
+
+.bigButton, .normalButton{text-align: center;
+                          color:white;
+                          background:#4D90FE;
+                          border: 1px solid #4D90FE;
+                          float:left;
+                          text-decoration: none;
+                          margin:10px;}
+
+.bigButton{font-size: 24px;
+           height: 50px;
+           line-height: 50px;
+           min-width: 150px;
+}
+
+.normalButton{
+    font-size: 14px;
+    height: 30px;
+    line-height: 30px;
+    min-width: 90px;
+}
+
+.bigButton:hover, .normalButton:hover{
+    color:#4D90FE;background:white;
+}
+
+.formButton input[class="bigButton"], 
+.panel .bigButton,
+.formButton input[class="normalButton"], 
+.panel .normalButton{
+    width: 100%;
+    min-height: 50px;
+    font-size: 16px;
+    margin: 0;
+}
+.formButton input[class="normalButton"], 
+.panel .normalButton{
+    width: 40%;
+    margin: 5%;
+}
+
+/*BIGBUTTON*/
+
+/*MESSAGE*/
+
+.info, .success, .warning, .error {  
+    margin: 5px 30px;
+    float:left;
+    width: calc(100% - 80px); 
+    padding: 10px;
+}
+
+@media (max-width:750px) , (max-device-width: 750px)  {
+    .info, .success, .warning, .error {  
+        margin: 5px 15px;
+        width: calc( 100% - 46px ); 
+        padding: 8px;
+        float:left;
+    }
+}
+
+.info {
+    color: #00529B;
+    background-color: #BDE5F8;/*#5cb85c*/
+}
+.success {
+    color: #4F8A10;
+    background-color: #DFF2BF;
+}
+.error {
+    color: #D8000C;
+    background-color: #FFBABA;/*#de6764*/
+}
+
+.warning {
+    color: #9F6000;
+    background-color: #FEEFB3;
+}
+
+/*MESSAGE */
+
+/*TABLE */
+
+table{
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid #ddd;
+}
+
+th{font-weight: bold;
+   padding: 7px 10px 8px 10px;
+   text-align: left;}
+
+tr td{border-top: 1px solid #dddddd;
+      padding: 7px 10px 8px 10px;}
+
+tr td a:hover{text-decoration: underline;}
+tr:nth-child(2n){    
+    background: whitesmoke;
+}
+/*TABLE*/
+
+/*PAGINATION*/
+
+.tlacitko a{
+    background: whitesmoke;
+    min-width: 30px;
+    max-width: 40px;
+    padding: 4px;
+    margin: 4px 2px;
+    display: block;
+}
+
+.paging{
+    float: right;
+    font-size: 0.9em;
+    line-height: 23px;
+    display: block;
+    clear: both;
+    display: table;
+    word-wrap: break-word;
+
+}
+
+.paging  a {
+    text-decoration: none;
+    border: 1px solid #a7a7a7;
+    color: #666;
+    float: left;
+    margin-left: 5px;
+    min-width: 19px;
+    padding: 0 2px;
+    text-align: center;
+    transition: background .2s, border-color .2s;
+}
+
+.paging span {
+    float: left;
+    line-height: 23px !important;
+    margin: 0 0 0 5px !important;
+}
+
+.paging .prev a, .paging .next a{
+    background: #2371c5;
+    border-color: #2371c5;
+    color: #fff;
+}
 
 
-//orientation: portrait
-//only screen and (max-device-width: 320px)
-@media only screen and (max-device-width: 480px){
-font-size: 140%;
+
+/*PAGINATION */
+
+/*MENU */
+
+article nav ul li a{
+    text-decoration: none;
+    line-height: 30px; 
+    padding: 0 0 0 10px ;   
+    width: calc( 100% - 10px );
+    display: block;
+    font-size: 14px;
+
+}
+article nav ul li a:hover{
+    background: whitesmoke;         
+}
+
+article nav ul li .active{
+    font-weight: bold;
 }
 
 @media print{
-    
-    
+    header{display: none;}
+    footer{display: none;}
+    .panel{display: none;}
+    .info, .success, .warning, .error {
+        display: none;
+    }
+
 }
 
-/*
-.error{background:#ffc0c0;color: red;}
+/*MENU*/
+/* COLOR */
 
-.success{background:#99ff66;color: green;}
-.success, .error{margin: 8px 8px 0px 8px;padding: 10px;font-size: 14px;}
+.yellowBG{
+    background: #ffb902 !important;
+    border: 1px solid #ffb902 !important;
+}
+.yellowBG:hover{
+    color: #ffb902 !important;
+    background: white !important;
+}
+.greenBG{
+    background: #81b900 !important;
+    border: 1px solid #81b900 !important;
+}
+.greenBG:hover{
+    color: #81b900 !important;
+    background: white !important;
+}
+
+/*CREATION*/
+
+.creationInfo{
+    overflow: hidden;
+    min-width: 250px; 
+}
+.creationInfo > div{
+    margin: 0 0 15px 0;
+}
+
+.creationInfo div:nth-child(1) h2{
+    line-height: 30px; font-weight: lighter; margin: 10px 0 0 0; font-size: 28px;
+}
+
+.creationInfo div:nth-child(1) h3{
+    line-height: 22px;color: #8c8989;font-weight: lighter;
+}
+
+.creationInfo a{
+    color:#8c8989;    
+}
+
+.creationInfo a:hover{
+    text-decoration: underline;
+}
+
+#csfd_id{display: none;}
+
+.ratingCSFD, .ratingIMDB{
+    width: 95px;
+    height: 55px;
+    border-radius: 5px;
+
+    font-size: 12px;
+    float: left;
+    text-align: center;
+    margin: 0 0 15px 0;
+    padding: 5px 0;
+}
+
+.ratingCSFD{
+    background: #bb0011;
+    color: #fff;
+}
+
+.ratingIMDB{
+    display: none;
+    background: #f1d700;
+    color: #000;
+}
+
+
+.ratingCSFD span, .ratingIMDB span{
+    font-size: 22px;
+}
+
+.creationRating{
+    float:right;width: 95px;height: 320px; margin: 0 0 0 20px;
+}
+
+.creationPoster{
+    float:left;height: 320px; margin: 0 20px 0 0;
+}
+
+.creationPoster img{
+    width: 200px;float:left;   
+}
+
+/*CREATION*/
+
+
+
+/*
+.polozka:nth-child(5n + 1) 
+.polozka:nth-child(5) ~ .polozka
+class:root
+class:empty
+class:checked
+class:enabled
+class:first-child
+class:nth-last-child(n)
+
+orientation: portrait
+
 */
